--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --no-warnings=ExperimentalWarning"
+    "start": "node --no-warnings=ExperimentalWarning",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/client-dynamodb": "^3.0.0"
+  },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.11.24",
+    "aws-sdk-client-mock": "^3.0.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.3.3"
   },
   "volta": {
